Crashing save corruption with dynamic paint drip effector groups. #47928

Closed
opened 2016-03-25 11:55:31 +01:00 by Alexander Gavrilov · 6 comments

System Information

Fedora 21

Blender Version

Broken: 2.77

Short description of error

Assigning an effector group to limit force fields affecting dynamic paint drip and saving produces a corrupted save file that creates a broken pointer in memory on load and causes crashes.

Exact steps for others to reproduce the error

  1. Load this save file: test-paint-effector-crash-noncorrupt.blend
  2. In the properties panel on the right there's a blank effector group field for Drip. Select Group in it.
  3. Save the file; better use a different name.
  4. Use Revert in the file menu to reload. If blender doesn't crash outright, you will see that the group field now shows garbage, which is a sure sign of a dangling pointer.
**System Information** Fedora 21 **Blender Version** Broken: 2.77 **Short description of error** Assigning an effector group to limit force fields affecting dynamic paint drip and saving produces a corrupted save file that creates a broken pointer in memory on load and causes crashes. **Exact steps for others to reproduce the error** 1. Load this save file: [test-paint-effector-crash-noncorrupt.blend](https://archive.blender.org/developer/F298231/test-paint-effector-crash-noncorrupt.blend) 2. In the properties panel on the right there's a blank effector group field for Drip. Select Group in it. 3. Save the file; better use a different name. 4. Use Revert in the file menu to reload. If blender doesn't crash outright, you will see that the group field now shows garbage, which is a sure sign of a dangling pointer.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Added subscriber: @mont29

Added subscriber: @mont29

maaaan… cannot work for sure!

maaaan… cannot work for sure!

This issue was referenced by 712a257994

This issue was referenced by 712a2579944fb9ee00fe3c6c34f07f2800361396

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47928
No description provided.