Fix T47928: Crashing save corruption with dynamic paint drip effector groups.

Dynapaint's `foreachIDLink` was mnot handling effector_weights->group pointer...